[FUSEQE-12158] Initial PoC for camel-quarkus