@@ -1,6 +1,5 @@
 package org.jboss.fuse.tnb.product.standalone;
 
-import org.apache.commons.io.FileUtils;
 import org.jboss.fuse.tnb.common.config.TestConfiguration;
 import org.jboss.fuse.tnb.common.utils.MapUtils;
 import org.jboss.fuse.tnb.common.utils.WaitUtils;
@@ -13,22 +12,23 @@ import org.slf4j.LoggerFactory;
 import com.google.auto.service.AutoService;
 import com.squareup.javapoet.CodeBlock;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Arrays;
+import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.TimeoutException;
 
 @AutoService(Product.class)
 public class LocalCamelStandalone extends Product {
     private static final Logger log = LoggerFactory.getLogger("LocalCamelStandalone");
     private final ExecutorService executorService = Executors.newFixedThreadPool(1);
-    private String logFile;
+    private Path logFile;
 
     @Override
     public void deploy() {
+        Maven.setupMaven();
     }
 
     @Override
@@ -37,31 +37,28 @@ public class LocalCamelStandalone extends Product {
 
     @Override
     public void deployIntegration(String name, CodeBlock routeDefinition, String... camelComponents) {
-        File location = new File("target");
+        log.info("Creating application project");
         Maven.createFromArchetype(
             "org.apache.camel.archetypes",
             "camel-archetype-main",
             TestConfiguration.camelVersion(),
             TestConfiguration.appGroupId(),
             name,
-            location
+            TestConfiguration.appLocation().toFile()
         );
 
-        RouteBuilderGenerator.toFile(routeDefinition, Paths.get("target", name, "src", "main", "java"));
+        RouteBuilderGenerator.toFile(routeDefinition, TestConfiguration.appLocation().resolve(name).resolve("src/main/java"));
 
-        File folder = new File(location, name);
-        File pom = new File(folder, "pom.xml");
+        Maven.addComponentDependencies(TestConfiguration.appLocation().resolve(name), camelComponents);
 
-        Maven.addComponentDependencies(pom, camelComponents);
-
-        logFile = String.format("target/%s.log", name);
+        logFile = TestConfiguration.appLocation().resolve(name + ".log");
 
         executorService.submit(() -> Maven.invoke(
-            folder,
-            pom,
+            TestConfiguration.appLocation().resolve(name),
             Arrays.asList("compile", "exec:java"),
-            MapUtils.toProperties(MapUtils.map("exec.mainClass", "com.test.MyApplication")),
-            logFile
+            null,
+            MapUtils.toProperties(Map.of("exec.mainClass", "com.test.MyApplication")),
+            logFile.toAbsolutePath().toString()
             )
         );
 
@@ -72,17 +69,16 @@ public class LocalCamelStandalone extends Product {
     public void waitForIntegration(String name) {
         log.info("Waiting until integration {} is running", name);
         try {
-            // todo fail fast when there is an exception / error
             WaitUtils.waitFor(() -> {
                 try {
-                    return FileUtils.readFileToString(new File(logFile), "UTF-8").contains("started and consuming");
+                    return Files.readString(logFile).contains("started and consuming");
                 } catch (IOException e) {
                     // Ignored as the file may not exist yet
                 }
                 return false;
-            }, 300, 1000L);
-        } catch (TimeoutException e) {
-            e.printStackTrace();
+            }, 60, 1000L);
+        } catch (Exception e) {
+            throw new RuntimeException("Wait for integration failed: ", e);
         }
     }
 
